fix comparator